# remote_rec

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  animelab.py  def.yml  main.py  pipeline.yml  plex.py  pyproject.toml
.github/workflows/: codeql-analysis.yml  python.yml
plugins/: animelab.py  plex.py
