[tool.poetry]
name = "plugins"
version = "0.0.0"

[tool.poetry.dependencies]
python = "==3.9"
pychromecast = "*"
requests-toolbelt = "*"
python-dotenv = "*"
redis = "*"
requests = "*"
pytest = "*"
plexapi = "*"
python-levenshtein = "*"
pluginbase = "*"

[tool.poetry.dev-dependencies]
ipdb = "*"
types-requests = "*"
pdbpp = "*"
pudb = "*"


[tool.isort]
profile = "black"

[tool.black]
skip_string_normalization = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
